Fix mobile bottom nav spacing issue

--- a/wp-content/themes/conorlewishobbs/style.css
+++ b/wp-content/themes/conorlewishobbs/style.css
@@ -379,7 +379,7 @@
         }
         /* end nav mobile */
         main>article {
-            grid-template-rows: 1fr repeat(3, 0.5fr);
+            grid-template-rows: 1fr repeat(3, 0.5fr) 0.1fr;
             height: max(700px, 100%);
         }
         main>article>.article-title-section {
